# callcluster-clang

./: CMakeLists.txt  CallgraphVisit.c  CallgraphVisit.h  ComplexityVisitor.c  ComplexityVisitor.h  DeclarationData.c  DeclarationData.h  DefinitionData.c  DefinitionData.h  GatheredCallgraph.c  GatheredCallgraph.h  StructuralAnalysis.c  StructuralAnalysis.h  Visitor.c  Visitor.h  analysis.json  basili_complexity.c  basili_complexity.h  build.sh  complexity_analysis.c  definition_analysis.c  definition_analysis.h  main.c  make.sh  parameters.c  parameters.h  readme.md  serialization.c  serialization.h  test.py
CabeComplexity/: ComplexityVisitor.h  complexity_analysis.c  complexity_analysis.h
test-projects/simple/: CMakeLists.txt  build.sh  tutorial.c
test_flow/: c:@F@almost.txt  c:@F@broken_for.txt  c:@F@broken_while.txt  c:@F@calculated_goto_rule.txt  c:@F@calculated_goto_rule_two.txt  c:@F@checkin_it.txt  c:@F@compound_compound.txt  c:@F@evil_for.txt  c:@F@evil_while.txt  c:@F@for_five.txt  c:@F@gotos.txt  c:@F@gotos_evil.txt  c:@F@hello.txt  c:@F@hello_there.txt  c:@F@main.txt  c:@F@many_logical_comparisons.txt  c:@F@no_care_for_returns.txt  c:@F@normal_for.txt  c:@F@normal_while.txt  c:@F@run_if.txt  c:@F@switch_in_switch.txt  c:@F@switch_with_garbage.txt  c:@F@there.txt  c:@F@unreachable.txt  c:@F@while_while.txt  c:@F@while_with_return.txt  c:@F@while_with_unreachable_part.txt
